# SciencyProject

./: .gitignore  README.md  pyproject.toml
analysis/: README.md
analysis/interestingThingA/: example.py
notes/: README.md
notes/20221018_calcsforexp/: calcsforexp.md  calcsforexp.py
writing/: README.md
